--- a/style.css
+++ b/style.css
@@ -53,5 +53,6 @@ p , ul, ol {
 .header {
     position: sticky;
     top:0;
+    -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
 }
