--- a/style.css
+++ b/style.css
@@ -1,58 +1,48 @@
-body {
-    background-color: #ffcadc;
-    margin: 0;
-}
-
-.pageHeader div {
-    background-color: #FE6298B2;
-    text-align: center;
-    font-size: 500%;
+* {
     font-family: Montserrat, Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+    margin:0;
 }
 
-.pageHeader {
-    text-decoration: none;
-    color: #ffffff;
-}
-
-p, h1, h2, h3, ul, ol {
-    font-family: Montserrat, Arial, Helvetica, sans-serif;
-    margin: 20px;
-}
-
-p , ul, ol {
-    font-size: 20px;
-}
-
-.navBar a {
-    text-decoration: none;
-    text-align: center;
-    font-family: Montserrat, Arial, Helvetica, sans-serif;
-}
-
-.navBar div {
-    width: 33.33333333%;
-    float: left;
-}
-
-.navBar {
-    width: 100%;
-    overflow: hidden;
-}
-
-.navBar h2 {
-    color: #ffffff;
-}
-
-.image {
-    display: block;
-    margin-left:20px;
-    width: 50%;
-}
-
-.header {
+header {
+    background-color: rgb(255, 170, 128);
     position: sticky;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    font-size: min(5vw, 200%);
+    padding: 15px;
+}
+
+#content {
+    width:100%;
+    height:100%;
+    display:flex;
+    flex-direction:row;
+}
+
+body {
+    position:absolute;
     top:0;
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
+    bottom:0;
+    left:0;
+    right:0;
+
+    display:flex;
+    flex-direction:column;
+}
+
+nav {
+    flex-basis:calc(100% / 4);
+}
+
+@media screen and (max-width: 767px) {
+    nav {
+        flex-basis: calc(100% / 3);
+    }
+}
+
+@media screen and (max-width: 500px) {
+    #content {
+        flex-direction:column;
+    }
 }
