--- a/style.css
+++ b/style.css
@@ -11,28 +11,42 @@ header {
     color: rgb(255, 255, 255);
     font-size: min(5vw, 200%);
     padding: 15px;
+    top:0;
 }
 
 #content {
     width:100%;
-    height:100%;
+    
     display:flex;
     flex-direction:row;
 }
 
 body {
-    position:absolute;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-
-    display:flex;
-    flex-direction:column;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    align-items: stretch;
+    display: flex;
+    flex-direction: column;
+    height:100%;
 }
 
 nav {
-    flex-basis:calc(100% / 4);
+    flex-basis: calc(100% / 4);
+    overflow: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    bottom:0;
+}
+
+nav::-webkit-scrollbar {
+    display: none;
+}
+
+footer {
+    
 }
 
 @media screen and (max-width: 767px) {
