--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header {
 
 #content {
     width:100%;
-    
+    height:100%;
     display:flex;
     flex-direction:row;
 }
@@ -30,7 +30,7 @@ body {
     align-items: stretch;
     display: flex;
     flex-direction: column;
-    height:100%;
+    
 }
 
 nav {
@@ -38,7 +38,8 @@ nav {
     overflow: scroll;
     scrollbar-width: none;
     -ms-overflow-style: none;
-    bottom:0;
+    height:100%;
+    position:absolute;
 }
 
 nav::-webkit-scrollbar {
