--- a/style.css
+++ b/style.css
@@ -23,13 +23,12 @@ header {
 
 body {
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
     align-items: stretch;
     display: flex;
     flex-direction: column;
+    width:100%;
+    height:100%;
+    overflow:scroll;
     
 }
 
@@ -37,6 +36,7 @@ nav {
     flex-basis: calc(100% / 4);
     height: 100%;
     background-color: rgb(247, 203, 202);
+    
 }
 
 nav div {
@@ -52,17 +52,25 @@ nav div:hover {
 
 article {
     margin: 15px;
-    
+    flex-basis: calc(100% / 4 * 3);
 }
 
 article * {
-    padding-block-end: 15px;
     
+    
+}
+
+.hidden {
+    display: none;
+}
+
+img {
+    width:100%;
 }
 
 @media screen and (max-width: 767px) {
     nav {
-        flex-basis: calc(100% / 5);
+        flex-basis: calc(100% / 4.5);
         overflow: scroll;
         -ms-overflow-style: none;
         scrollbar-width: none;
